# learning_path

./: .dockerignore  .gitattributes  .gitignore
Minibudget/static/css/: style.css
Minibudget/static/js/: script.js
Minibudget/templates/: dashboard.html  expenses.html
Minibudget/templates/components/: icons.html
Minibudget/templates/layouts/: base.html
ai-engineer/: pyproject.toml
ai-engineer/01-foundations/: Untitled  calc-with-class.py
ai-engineer/01-foundations/array-ops/: array-2d.py  array-ops.py  arry-ops-for.py  copy-view.py
ai-engineer/jupyter/calc-with-class/: calculator_class.ipynb
ai-engineer/reviewer/backend/app/api/: endpoints.py
ai-engineer/reviewer/backend/app/repositories/: study_month_repository.py
ai-engineer/reviewer/frontend/src/: App.jsx
ai-engineer/reviewer/frontend/src/features/info/: LearningStrategy.jsx
ai-engineer/reviewer/frontend/src/features/studyPlan/: StudyPlan.jsx
ai-engineer/reviewer/frontend/src/shared/api/: cardApi.js
estudioMadame/homepage/: homepage.html
jupyter/: pyproject.toml
jupyter/calc-cells/: README.md  main.py  pyproject.toml
jupyter/calc-cells/.ipynb_checkpoints/: calculator_cells-checkpoint.ipynb
jupyter/calc-jupyter/: calc-jupyter.ipynb  calc-python.py  main.py  pyproject.toml
k9s-config/: config.yaml
k9sSetup/: Makefile  README.md  init.sh  k9s-with-tunnel.sh  multi_connect.py  pyproject.toml
k9sSetup/src/: inventory.py  multi_status.py  network_validator.py  tunnel.py
k9s_setup/: .dockerignore  .editorconfig  .gitattributes  main.py  pyproject.toml
