[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter",
]

[tool.uv.workspace]
members = [
    "calc-cells",
    "calc-jupyter",
]

[tool.uv.sources]
jupyter = { workspace = true }
